# REST-Worker-Service

./: .gitignore  Manager.py  README.md  RESTServiceSystem.cabal  Utilities.py  Worker.py  complexity_results.txt  launch_cyclo_calculation_service.sh  launch_manager.sh  launch_workers.sh  launchworkers.sh  requirements.txt
Results and Screenshots/: Performance Graph.xlsx
src/: CyclomaticComplexity.hs  Lib.hs  PrimeFactors.hs  Utils.hs
